samples/_failures_safe/1761040141_8a68cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b99291a.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_1b99291a.c:151:20: error: expected ‘;’ at end of input
  151 |         token.value
      |                    ^
      |                    ;
./samples/SAFE/__tmp_1b99291a.c:151:9: error: expected declaration or statement at end of input
  151 |         token.value
      |         ^~~~~
./samples/SAFE/__tmp_1b99291a.c:151:9: error: expected declaration or statement at end of input
